fixed footer overlap

--- a/resources/css/footer.css
+++ b/resources/css/footer.css
@@ -27,25 +27,22 @@ footer {
 
 
 .validation {
-	position: absolute;
+	position: relative;
+	float: left;
 	padding-left: 5px;
 	color: #E0E0E0;
-	z-index: 1;
 }
 
 .center {
 	position: relative;
-	float: left;
 	color: #E0E0E0;
 	width: 100%;
 	text-align: center;
-	z-index: 0;
 }
 
 .right {
 	position: relative;
 	float: right;
-	right: 5px;
 	text-align: right;
 	padding-right: 5px;
 	color: #E0E0E0;
